--- a/ATEP Web App/war/ATEP_Web_App.css
+++ b/ATEP Web App/war/ATEP_Web_App.css
@@ -16,8 +16,9 @@ h1 {
 }
 
 /** Most GWT widgets already have a style name defined */
-.gwt-DialogBox {
-  width: 400px;
+.label {
+  font-size: 14pt;
+  font-weight: bold;
 }
 
 .dialogVPanel {
