Made the Add New Student button and Remove Student button orient to new panels with working clickHandlers.
For some reason it loads from persistance.

--- a/ATEP Web App/war/ATEP_Web_App.css
+++ b/ATEP Web App/war/ATEP_Web_App.css
@@ -21,6 +21,15 @@ h1 {
   font-weight: bold;
 }
 
+.notStarted {
+	font-weight: bold;
+	}
+	
+.assessment {
+	text-align: justify;
+	text-justify: inter-word;
+}
+
 .dialogVPanel {
   margin: 5px;
 }
