--- a/ATEP Web App/war/ATEP_Web_App.css
+++ b/ATEP Web App/war/ATEP_Web_App.css
@@ -1,7 +1,5 @@
 /** Add css rules here for your application. */
 
-
-/** Example rules used by the template application (remove for your app) */
 h1 {
   font-size: 2em;
   font-weight: bold;
@@ -10,26 +8,9 @@ h1 {
   text-align: center;
 }
 
-.sendButton {
-  display: block;
-  font-size: 16pt;
-}
-
-/** Most GWT widgets already have a style name defined */
-.label {
+/** class for changing appearance of category labels.*/
+.label
+{
   font-size: 14pt;
   font-weight: bold;
-}
-
-.dialogVPanel {
-  margin: 5px;
-}
-
-.serverResponseLabelError {
-  color: red;
-}
-
-/** Set ids using widget.getElement().setId("idOfElement") */
-#closeButton {
-  margin: 15px 6px 6px;
 }
